Subiendo vista modificada

--- a/src/main/java/vista/Login.form
+++ b/src/main/java/vista/Login.form
@@ -71,7 +71,7 @@
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="E:\Proyectos-Desktop\SystemHotelReservas\src\main\java\Imagenes\Proyecto nuevo.png"/>
+              <Image iconType="2" name="F:\Proyectos-Desktop\SystemHotelReservas\src\main\java\Imagenes\costavelaImg.png"/>
             </Property>
           </Properties>
           <Constraints>
